# android_native_vcam

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agent.js  awesomecam_player
app/src/main/java/com/namnh/awesomecam/: InjectorActivity.kt  LogsActivity.kt  Mp4FeedController.kt  TelemetryStore.kt  VideoBridge.kt
app/src/main/jni/: CMakeLists.txt  awesomecam_player.cpp  hook.cpp  injector.cpp  injector_main.cpp  libyuv_runtime.cpp  libyuv_runtime.h  proxy.cpp  ready_frame_cache.cpp  streamclient.cpp  test.cpp  test_inject.cpp  video2camera_ipc.h  video2camera_ndk.cpp  video2camera_ndk.h  video2camera_player.cpp  video2camera_player.h  video2camera_service.cpp  video2camera_service.h
app/src/main/res/drawable/: bg_app_gradient.xml  bg_brutal_card_cyan.xml  bg_brutal_shadow_small.xml  bg_chip_cyan.xml  bg_chip_muted.xml  bg_chip_yellow.xml  bg_miuix_badge.xml  bg_miuix_card.xml  bg_miuix_icon_button.xml  bg_miuix_inline_panel.xml  bg_miuix_log_panel.xml  bg_miuix_outline_button.xml  bg_miuix_primary_button.xml  bg_miuix_secondary_button.xml  bg_terminal_panel.xml
app/src/main/res/layout/: activity_injector.xml  activity_logs.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
sepolicy-patcher/: README.md  action.sh  module.prop  post-fs-data.sh  sepolicy.rule
